# python_routes_security

./: .gitignore  DATA_LAYER_TESTING.md  FAQ.md  FLOW.md  MSAL_REQUIREMENTS.md  PRODUCTION.md  README.md  REQUIREMENTS.md  SECURITY_MODULE.md  codiing guidelines.txt  data layer testing.txt  project notes  pyproject.toml  tmp.txt  useful_notes.txt
app/: logging_config.py  main.py  msal_requirements.txt  settings.py
app/db/: __init__.py  filters.py  init_db.py  session.py
app/models/: hr.py  security.py
app/msal_util/: CODING.md  RBAC_IMPLEMENTATION.md  RBAC_README.md  RBAC_REQUIREMENTS.md  README.md  __init__.py  config.py  context.py  graph_client.py  jwks_cache.py  rbac.txt  rbac_engine.py  validator.py
app/routers/: admin.py  decorator_demo.py  employees.py  performance_reviews.py
app/schemas/: hr.py  security.py
app/security/: __init__.py  auth.py  config.py  context.py  decorators.py  dependencies.py
config/: security_config.yaml
scripts/: restart_fastapi.sh
tests/: __init__.py  conftest.py
tests/test_data_layer/: __init__.py  test_auth_data.py  test_employees_data.py  test_raw_sql_example.py
tests/test_msal_util/: __init__.py  test_config.py  test_context.py  test_graph_client.py  test_validator.py
